...

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iV_poster"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:contentDescription="@string/poster"
                    android:src="@drawable/gradient"
                    android:scaleType="centerCrop" />

...
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@drawable/gradient" />
            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingRight="12dp"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin"
...
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <ImageView
                        android:id="@+id/youStar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_star_you" />

                    <TextView
                        android:id="@+id/tv_your_rate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0/10"
                        android:textAlignment="center"
                        android:textColor="@color/colorFontContent"
                        android:textSize="18sp"
...
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <com.rengwuxian.materialedittext.MaterialEditText

                    android:id="@+id/et_comment"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:hint="Comment"
                    app:met_baseColor="@color/colorFontContent"
                    app:met_primaryColor="@color/colorFontContent"
                    app:met_floatingLabel="highlight"
                    android:layout_marginLeft="12dp"
                    app:met_maxCharacters="140"
                    app:met_minCharacters="0" />

                <ImageView
                    android:layout_margin="12dp"
                    android:id="@+id/btn_comment"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_send_enabled"/>

            </LinearLayout>

...
